@@ -1,3 +1,9 @@
+2011-07-18  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/winlib/WIN32GState.m (GSCreateBitmap): Add support for
+	(8 bit-greyscale, 8-bit alpha) format. This fixes various default
+	images not showing (menu arrows, scroller arrows, etc.)
+
 2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Source/x11/XGServerWindow.m: Add Xcursor support (for RGBA
